force-app/main/default/objects/Visit__c/fields/Account_Record_Type_ID_Visit__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_ID_Visit__c</fullName>
    <description>Return the Record Type ID of the associated Account Record.</description>
    <formula>Account__r.RecordType.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Return the Record Type ID of the associated Account Record.</inlineHelpText>
    <label>Account Record Type ID</label>
    <type>Text</type>
</CustomField>