force-app/main/default/objects/Visit__c/fields/Actual_Spend_Versus_Budget__c.field-meta.xml
<CustomField>
    <fullName>Actual_Spend_Versus_Budget__c</fullName>
    <formula>Total_Visit_Spend__c - Budget_Related_to_Visit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Spend Versus Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>