force-app/main/default/objects/Visit__c/fields/Anonymous_Guest__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_Guest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells if a guest is anonymous or not.</description>
    <inlineHelpText>Tells if a guest is anonymous or not.</inlineHelpText>
    <label>Anonymous Guest</label>
    <type>Checkbox</type>
</CustomField>