force-app/main/default/objects/Visit__c/fields/Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date__c</fullName>
    <description>Field to be used for advance bookings only.</description>
    <inlineHelpText>Field to be used for advance bookings only.</inlineHelpText>
    <label>Expected Date of Arrival</label>
    <type>Date</type>
</CustomField>