force-app/main/default/objects/Visit__c/fields/Arrived_on_expected_day__c.field-meta.xml
<CustomField>
    <fullName>Arrived_on_expected_day__c</fullName>
    <description>Indicates that the visit was checked in on the expected day</description>
    <formula>(DATEVALUE( Visit_Date_Time__c ) == DATEVALUE(Expected_Arrival_Date_Time__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates that the visit was checked in on the expected day</inlineHelpText>
    <label>Arrived on expected day</label>
    <type>Checkbox</type>
</CustomField>