force-app/main/default/objects/Visit__c/fields/Arrived_within_7_days__c.field-meta.xml
<CustomField>
    <fullName>Arrived_within_7_days__c</fullName>
    <formula>AND(
	(DATEVALUE(Visit_Date_Time__c - 7) &lt;= DATEVALUE(Expected_Arrival_Date_Time__c)),
	(DATEVALUE(Visit_Date_Time__c + 7) &gt;= DATEVALUE(Expected_Arrival_Date_Time__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrived within 7 days</label>
    <type>Checkbox</type>
</CustomField>