force-app/main/default/objects/Visit__c/fields/Blackbook_Guest_Status__c.field-meta.xml
<CustomField>
    <fullName>Blackbook_Guest_Status__c</fullName>
    <label>Private Client Visit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Visit</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>