force-app/main/default/objects/Visit__c/fields/Booking_Partnership_Name__c.field-meta.xml
<CustomField>
    <fullName>Booking_Partnership_Name__c</fullName>
    <formula>Group_Booking__r.Name_of_Event__c</formula>
    <label>Booking/Partnership Name</label>
    <type>Text</type>
</CustomField>