force-app/main/default/objects/Visit__c/fields/Booking_Partnership_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Partnership_Type__c</fullName>
    <formula>if ( ISBLANK(Group_Booking__r.RecordType.Name),  Partnership_Promotion__r.RecordType.Name , Group_Booking__r.RecordType.Name )</formula>
    <label>Booking/Partnership Type</label>
    <type>Text</type>
</CustomField>