force-app/main/default/objects/Visit__c/fields/Brand_Categories__c.field-meta.xml
<CustomField>
    <fullName>Brand_Categories__c</fullName>
    <label>Brand Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Category</valueSetName>
    </valueSet>
</CustomField>