force-app/main/default/objects/Visit__c/fields/Brand_Event__c.field-meta.xml
<CustomField>
    <fullName>Brand_Event__c</fullName>
    <inlineHelpText>Enter name of Brand Event that resulted in this VIP Account being created.</inlineHelpText>
    <label>Brand Event</label>
    <length>250</length>
    <type>Text</type>
</CustomField>