force-app/main/default/objects/Visit__c/fields/Brand_Referral__c.field-meta.xml
<CustomField>
    <fullName>Brand_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter name of Brand Referral that resulted in this VIP Account being created.</inlineHelpText>
    <label>Brand Referral</label>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>