force-app/main/default/objects/Visit__c/fields/Budget_Related_to_Visit__c.field-meta.xml
<CustomField>
    <fullName>Budget_Related_to_Visit__c</fullName>
    <label>Budget Related to Visit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>