force-app/main/default/objects/Visit__c/fields/Check_in_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Check in email was sent to the booking parties</description>
    <inlineHelpText>Indicates whether the Check in email was sent to the booking parties</inlineHelpText>
    <label>Check in Email Sent</label>
    <type>Checkbox</type>
</CustomField>