force-app/main/default/objects/Visit__c/fields/Check_out_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Check_out_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Check out email was set to the booking parties</description>
    <inlineHelpText>Indicates that the Check out email was set to the booking parties</inlineHelpText>
    <label>Check out Email Sent</label>
    <type>Checkbox</type>
</CustomField>