force-app/main/default/objects/Visit__c/fields/Company_Group_name__c.field-meta.xml
<CustomField>
    <fullName>Company_Group_name__c</fullName>
    <label>Company/Group name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>