force-app/main/default/objects/Visit__c/fields/Cost_Of_Services__c.field-meta.xml
<CustomField>
    <fullName>Cost_Of_Services__c</fullName>
    <description>The total cost of the VIP services used this visit</description>
    <inlineHelpText>The total cost of the VIP services used this visit (Estimated)</inlineHelpText>
    <label>Cost Of Services</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>