force-app/main/default/objects/Visit__c/fields/Cost_of_shipping__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_shipping__c</fullName>
    <inlineHelpText>Enter cost of shipping if relevant.</inlineHelpText>
    <label>Cost of shipping</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>