force-app/main/default/objects/Visit__c/fields/Dedicated_Concierge__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Concierge__c</fullName>
    <label>Dedicated Concierge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>