force-app/main/default/objects/Visit__c/fields/Domestic_International__c.field-meta.xml
<CustomField>
    <fullName>Domestic_International__c</fullName>
    <inlineHelpText>Field populated based on ‘Country of Residence’ and Village Visit.</inlineHelpText>
    <label>Domestic / International</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>