force-app/main/default/objects/Visit__c/fields/Email_Notification_Errors__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification_Errors__c</fullName>
    <description>Shows any notification errors</description>
    <inlineHelpText>Shows any notification errors</inlineHelpText>
    <label>Email Notification Errors</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>