force-app/main/default/objects/Visit__c/fields/Entourage__c.field-meta.xml
<CustomField>
    <fullName>Entourage__c</fullName>
    <description>The names of guests accompanying the VIP guest</description>
    <inlineHelpText>The names of guests accompanying the VIP guest</inlineHelpText>
    <label>Names of guests attending</label>
    <type>TextArea</type>
</CustomField>