force-app/main/default/objects/Visit__c/fields/Estimated_Total_Visit_Spend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Visit_Spend__c</fullName>
    <description>For spend that cannot be associated to a Brand Purchase and is not tracked via HFS or VIP.</description>
    <inlineHelpText>For spend that cannot be associated to a Brand Purchase and is not tracked via HFS or VIP.</inlineHelpText>
    <label>Manual Spend entry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>