force-app/main/default/objects/Visit__c/fields/Expected_Arrival_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_Arrival_Date_Time__c</fullName>
    <formula>Group_Booking__r.Expected_Arrival__c</formula>
    <label>Expected Arrival Date/Time</label>
    <type>DateTime</type>
</CustomField>