force-app/main/default/objects/Visit__c/fields/Expected_Number_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Expected_Number_of_Guests__c</fullName>
    <description>Field to be used for advanced bookings only</description>
    <inlineHelpText>Field to be used for advanced bookings only</inlineHelpText>
    <label>Expected Number of Guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>