force-app/main/default/objects/Visit__c/fields/Expected_Time_of_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Expected_Time_of_Arrival__c</fullName>
    <description>Field to be used for advanced bookings only.</description>
    <inlineHelpText>Field to be used for advanced bookings only.</inlineHelpText>
    <label>Expected Time of Arrival</label>
    <type>Time</type>
</CustomField>