force-app/main/default/objects/Visit__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <inlineHelpText>DO NOT add any personal data in this field.</inlineHelpText>
    <label>Visit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>