force-app/main/default/objects/Visit__c/fields/GB_Status__c.field-meta.xml
<CustomField>
    <fullName>GB_Status__c</fullName>
    <formula>TEXT(Group_Booking__r.Status__c)</formula>
    <label>GB Status</label>
    <type>Text</type>
</CustomField>