force-app/main/default/objects/Visit__c/fields/Group_Booking__c.field-meta.xml
<CustomField>
    <fullName>Group_Booking__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Booking/Partnership</label>
    <referenceTo>Group_Booking__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>