force-app/main/default/objects/Visit__c/fields/Group_Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Booking_Type__c</fullName>
    <formula>Group_Booking__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group/Partnership Type</label>
    <type>Text</type>
</CustomField>