force-app/main/default/objects/Visit__c/fields/Guest_Record_Type_Visit__c.field-meta.xml
<CustomField>
    <fullName>Guest_Record_Type_Visit__c</fullName>
    <description>Return the Record Type of the associated Guest Record</description>
    <formula>Account__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Return the Record Type of the associated Guest Record</inlineHelpText>
    <label>Guest Record Type Visit</label>
    <type>Text</type>
</CustomField>