force-app/main/default/objects/Visit__c/fields/Hours_in_Village__c.field-meta.xml
<CustomField>
    <fullName>Hours_in_Village__c</fullName>
    <description>How many hours the guests were in the village</description>
    <formula>( Check_Out_Date_Time__c - Visit_Date_Time__c )*24</formula>
    <inlineHelpText>How many hours the guests were in the village</inlineHelpText>
    <label>Dwell Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>