force-app/main/default/objects/Visit__c/fields/Informed_via__c.field-meta.xml
<CustomField>
    <fullName>Informed_via__c</fullName>
    <label>Informed via</label>
    <type>TextArea</type>
</CustomField>