force-app/main/default/objects/Visit__c/fields/Key_Guest_Feedback_Summary__c.field-meta.xml
<CustomField>
    <fullName>Key_Guest_Feedback_Summary__c</fullName>
    <label>Key Guest Feedback Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>