force-app/main/default/objects/Visit__c/fields/Last_Spend__c.field-meta.xml
<CustomField>
    <fullName>Last_Spend__c</fullName>
    <label>Last Spend</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>