force-app/main/default/objects/Visit__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TIC</fullName>
            </value>
            <value>
                <fullName>TIC Satellite</fullName>
            </value>
            <value>
                <fullName>Train Station</fullName>
            </value>
            <value>
                <fullName>Coach Pod</fullName>
            </value>
            <value>
                <fullName>VIP Lounge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>