force-app/main/default/objects/Visit__c/fields/Migration_Key__c.field-meta.xml
<CustomField>
    <fullName>Migration_Key__c</fullName>
    <label>Migration Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>