force-app/main/default/objects/Visit__c/fields/My_Village_Visit__c.field-meta.xml
<CustomField>
    <fullName>My_Village_Visit__c</fullName>
    <formula>if (TEXT($User.Village__c ) =  Village__r.Name , true, false)</formula>
    <label>My Village Visit</label>
    <type>Checkbox</type>
</CustomField>