force-app/main/default/objects/Visit__c/fields/Next_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Visit_Date__c</fullName>
    <description>The next time the guest plans on visiting</description>
    <inlineHelpText>The next time the guest plans on visiting</inlineHelpText>
    <label>Next Visit Date</label>
    <type>Date</type>
</CustomField>