force-app/main/default/objects/Visit__c/fields/No_Show__c.field-meta.xml
<CustomField>
    <fullName>No_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this option if the Group didn&apos;t turn up. This will remove any associated VIP cards, zero the guest count and remove the check-in date/time</inlineHelpText>
    <label>No Show</label>
    <type>Checkbox</type>
</CustomField>