force-app/main/default/objects/Visit__c/fields/No_Show_Status_Check__c.field-meta.xml
<CustomField>
    <fullName>No_Show_Status_Check__c</fullName>
    <description>Checks in case it has been 5 days past the expected arrival date.</description>
    <formula>IF(  AND( NOT(ISBLANK( Arrival_Date__c )),   TODAY()  &gt;=  Arrival_Date__c + 5), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Show Status Check</label>
    <type>Checkbox</type>
</CustomField>