force-app/main/default/objects/Visit__c/fields/Number_of_Children__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Children__c</fullName>
    <description>Number of non qualifying guests (usually children)</description>
    <inlineHelpText>Number of non qualifying guests (usually children)</inlineHelpText>
    <label>Number of Children</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>