force-app/main/default/objects/Visit__c/fields/Number_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Guests__c</fullName>
    <description>Not all guests will receive a VIP card so this field is used to track qualified guests (with or without a VIP Card)</description>
    <inlineHelpText>Enter the total numbers of guests in visit</inlineHelpText>
    <label>Number of Adults</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>