force-app/main/default/objects/Visit__c/fields/Number_of_new_Brands_Introduced__c.field-meta.xml
<CustomField>
    <fullName>Number_of_new_Brands_Introduced__c</fullName>
    <label>Number of new Brands Introduced</label>
    <summaryForeignKey>Brand_Introduced_Junction__c.Visit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>