force-app/main/default/objects/Visit__c/fields/Number_of_Visit_Guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Visit_Guests__c</fullName>
    <description>Number of total guests for the visit.</description>
    <formula>Number_of_Guests__c + Number_of_Children__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of total guests for the visit.</inlineHelpText>
    <label>Number of Guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>