force-app/main/default/objects/Visit__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <formula>IF(  ISBLANK(Group_Booking__c)  ,  Partnership_Promotion__r.Id ,  Group_Booking__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Id</label>
    <type>Text</type>
</CustomField>