force-app/main/default/objects/Visit__c/fields/Partner_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Name__c</fullName>
    <formula>IF( Booking_Partnership_Type__c = &apos;Partnership Promotion&apos;,  Partnership_Promotion__r.Partner_Name__c ,   Group_Booking__r.Organisation__r.Name  )</formula>
    <label>Partner Account Name</label>
    <type>Text</type>
</CustomField>