force-app/main/default/objects/Visit__c/fields/Partnership_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Promotion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Partnership Promotion</label>
    <referenceTo>Marketing_Activity__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>