force-app/main/default/objects/Visit__c/fields/Private_Client_Personal_Shopping_Status__c.field-meta.xml
<CustomField>
    <fullName>Private_Client_Personal_Shopping_Status__c</fullName>
    <inlineHelpText>Identifies if the Guest is new or repeat to personal shopping, set when the visit is created</inlineHelpText>
    <label>Private Client Personal Shopping Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Visit</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>