force-app/main/default/objects/Visit__c/fields/Private_Client_Team__c.field-meta.xml
<CustomField>
    <fullName>Private_Client_Team__c</fullName>
    <inlineHelpText>Enter name of PCS Team Member or Ambassador that resulted in this VIP Account being created.</inlineHelpText>
    <label>Private Client Team</label>
    <length>250</length>
    <type>Text</type>
</CustomField>