force-app/main/default/objects/Visit__c/fields/Private_Space_Used__c.field-meta.xml
<CustomField>
    <fullName>Private_Space_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Space Used</label>
    <type>Checkbox</type>
</CustomField>