force-app/main/default/objects/Visit__c/fields/Remote_Visit__c.field-meta.xml
<CustomField>
    <fullName>Remote_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remote Visit</description>
    <inlineHelpText>Tick, if the contact with the guest was held remotely</inlineHelpText>
    <label>Remote Visit</label>
    <type>Checkbox</type>
</CustomField>