force-app/main/default/objects/Visit__c/fields/Services_Used__c.field-meta.xml
<CustomField>
    <fullName>Services_Used__c</fullName>
    <description>The services that the guest has used in this visit</description>
    <inlineHelpText>The services that the guest has used in this visit</inlineHelpText>
    <label>Services Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VIP_Services</valueSetName>
    </valueSet>
</CustomField>