force-app/main/default/objects/Visit__c/fields/Total_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Spend__c</fullName>
    <description>Calculated from HFS OR VIP Card Spend PLUS Total Brands Purchased Spend OR Estimated Total Visit Spend.</description>
    <formula>IF( OR(ISBLANK(Total_Visit_Spend_HFS__c), Total_Visit_Spend_HFS__c == 0),
	IF(OR(ISBLANK(Total_Visit_Spend__c), Total_Visit_Spend__c == 0),
   Estimated_Total_Visit_Spend__c  + Total_Visit_Spend_VIP_Card__c, Total_Visit_Spend__c  + Total_Visit_Spend_VIP_Card__c),
	IF(OR(ISBLANK(Total_Visit_Spend__c), Total_Visit_Spend__c == 0),	
			 Estimated_Total_Visit_Spend__c  + Total_Visit_Spend_HFS__c, Total_Visit_Spend__c  + Total_Visit_Spend_HFS__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated from HFS OR VIP Card Spend PLUS Total Brands Purchased Spend OR Estimated Total Visit Spend.</inlineHelpText>
    <label>Total Visit Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>