force-app/main/default/objects/Visit__c/fields/Total_Visit_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Visit_Spend__c</fullName>
    <description>Total spend from related Brands Purchase</description>
    <inlineHelpText>Total spend from related Brands Purchase</inlineHelpText>
    <label>Total Brands Purchased Spend</label>
    <summarizedField>Brand_Visit_Junction__c.Amount_Spent__c</summarizedField>
    <summaryForeignKey>Brand_Visit_Junction__c.Visit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>