force-app/main/default/objects/Visit__c/fields/Total_Visit_Spend_HFS__c.field-meta.xml
<CustomField>
    <fullName>Total_Visit_Spend_HFS__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Total spend from related HFS Cases</description>
    <inlineHelpText>Total spend from related HFS Cases</inlineHelpText>
    <label>Total Visit Spend (HFS)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>