force-app/main/default/objects/Visit__c/fields/Total_Visit_Spend_VIP_Card__c.field-meta.xml
<CustomField>
    <fullName>Total_Visit_Spend_VIP_Card__c</fullName>
    <description>Total spend from related eVIP records.</description>
    <inlineHelpText>Total spend from related eVIP records.</inlineHelpText>
    <label>Total Visit Spend (VIP Card)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>